examples/errors/parsing/gcd-iter-empty-body.cn
fun gcd : (Int * Int) -> Int [impure] = {
  (x, y) ->
  iter ((a, b) = ((x, y) : (Int * Int))) {
  }
}

main : () [impure] = ()
